# klient

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: FindLibAV.cmake
src/: mainwindow.cpp  mainwindow.h  stream.cpp  stream.h  video.c
translations/: en.ts  sr.ts
ui/: mainwindow.ui
